Added ExceptionHandler and some business logic
