# src/main/java/com/parkinglotmanager/error/ParkingLotManagerExceptionHandler.java
@@ -1,0 +1,26 @@
+package com.parkinglotmanager.error;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.ControllerAdvice;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.WebRequest;
+import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+
+import com.parkinglotmanager.ErrorType;
+
+@ControllerAdvice
+public class ParkingLotManagerExceptionHandler extends ResponseEntityExceptionHandler {
+
+	@ExceptionHandler({ Exception.class })
+	public ResponseEntity<Object> handleAll(Exception ex, WebRequest request) {
+		ErrorType error = new ErrorType().error("Unexepected error occured");
+		return new ResponseEntity<Object>(error, HttpStatus.INTERNAL_SERVER_ERROR);
+	}
+
+	@ExceptionHandler({ ParkingLotManagerException.class })
+	ResponseEntity<Object> handleCustomException(ParkingLotManagerException plmex, WebRequest request) {
+		ErrorType error = new ErrorType().error(plmex.getMessage());
+		return new ResponseEntity<Object>(error, HttpStatus.INTERNAL_SERVER_ERROR);
+	}
+}
